--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,18 +16,18 @@
 .container {
     max-width: 400px;
     margin: 100px auto;
-    padding: 20px;
+    padding: 50px;
     background-color: rgba(255, 255, 255, 0); /* Semi-transparent form background */
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 }
 form{
-    background-color: rgba(255, 255, 255, 0.3); /* Semi-transparent form background */ 
+    background-color: rgba(255, 255, 255, 0.3); /* Semi-transparent form background */
 }
 
 h1 {
     text-align: center;
-    color: #333;
+    color: #ffffff
 }
 
 label {
@@ -64,7 +64,7 @@ button:hover {
 }
 
 .message a {
-    color: #007BFF;
+    color: azure;
     text-decoration: none;
 }
 
@@ -86,8 +86,8 @@ button:hover {
             
             <button type="submit">Login</button>
         </form>
-        <div class="message" style="color:rgb(28, 16, 16);font-weight:800">
-            Don't have an account?<a href="/signup">Signup here</a>
+        <div class="message" style="color:aliceblue; font: weight 500px;">
+            Don't have an account?  <a href="/signup">Signup here</a>
         </div>
     </div>
 </body>
